fix endpoints of swagger
